--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "css-loader": "^7.1.1",
         "depcheck": "^1.4.7",
         "eslint": "^8.57.0",
+        "eslint-plugin-react": "^7.34.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
         "file-loader": "^6.2.0",
